<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/close_app"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:src="@drawable/close" />
            </FrameLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="137dp"
                android:layout_height="52dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close_app" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/profile_info"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_first"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:theme="@style/TextInputStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:hint="@string/first_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_last"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:theme="@style/TextInputStyle"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_first"
                android:hint="@string/last_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_mi"
                android:layout_width="66dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:hint="@string/mi"
                android:theme="@style/TextInputStyle"
                app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/outlinedTextField_first">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/date_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_last" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:layout_marginTop="16dp"
                android:theme="@style/TextInputStyle"
                app:layout_constraintStart_toStartOf="@+id/date_info"
                app:layout_constraintTop_toBottomOf="@+id/date_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/social_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_security_number"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_social_first"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/TextInputStyle"
                android:hint="***"
                app:layout_constraintStart_toStartOf="@+id/social_info"
                app:layout_constraintTop_toBottomOf="@+id/social_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_social_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_social_second"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputStyle"
                android:layout_marginStart="16dp"
                android:hint="**"
                app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField_social_first"
                app:layout_constraintStart_toEndOf="@+id/outlinedTextField_social_first"
                app:layout_constraintTop_toTopOf="@+id/outlinedTextField_social_first">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_social_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_social_third"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:theme="@style/TextInputStyle"
                android:hint="****"
                app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField_social_second"
                app:layout_constraintStart_toEndOf="@+id/outlinedTextField_social_second"
                app:layout_constraintTop_toTopOf="@+id/outlinedTextField_social_second">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_social_third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:theme="@style/TextInputStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_social_third"
                android:hint="@string/address">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_address">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField_city"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="10dp"
                    android:theme="@style/TextInputStyle"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:theme="@style/TextInputStyle"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/state">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField_zip"
                    android:layout_width="match_parent"
                    android:theme="@style/TextInputStyle"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:hint="@string/zip">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:letterSpacing="0.0"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>